# HRMS-User-Management-Service

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  pyproject.toml
.github/workflows/: build-and-push.yml
app/: main.py
app/api/: auth.py  dependencies.py  onboarding.py  users.py
app/asgardeo/: asgardeo.py  callbacks.md  group.py  integration.md  summary.md  usage_guide.md
app/core/: asgardeo.py  cache.py  config.py  database.py  events.py  integrations.py  kafka.py  logging.py  rbac.py  scheduler.py  security.py  topics.py
app/models/: __init__.py  onboarding.py  users.py
